--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     <div id="app">
-        <ul>
+        <ul v-if="emailsList.length>9">
             <li v-for="email in emailsList">{{email}}</li>
         </ul>
     </div>
